--- a/public/css/main.css
+++ b/public/css/main.css
@@ -522,6 +522,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -530,12 +534,20 @@ video {
   position: relative;
 }
 
+.inset-0 {
+  inset: 0px;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
 
 .bottom-4 {
   bottom: 1rem;
+}
+
+.bottom-6 {
+  bottom: 1.5rem;
 }
 
 .left-0 {
@@ -556,18 +568,6 @@ video {
 
 .top-4 {
   top: 1rem;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
-.bottom-6 {
-  bottom: 1.5rem;
-}
-
-.bottom-2 {
-  bottom: 0.5rem;
 }
 
 .z-20 {
@@ -617,12 +617,20 @@ video {
   margin-right: 0.5rem;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .mt-auto {
   margin-top: auto;
 }
 
 .flex {
   display: flex;
+}
+
+.table {
+  display: table;
 }
 
 .hidden {
@@ -690,6 +698,10 @@ video {
   width: 66.666667%;
 }
 
+.w-2\/4 {
+  width: 50%;
+}
+
 .w-3\/4 {
   width: 75%;
 }
@@ -709,19 +721,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-56 {
-  width: 14rem;
 }
 
 .cursor-pointer {
@@ -796,6 +795,12 @@ video {
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
 .self-center {
   align-self: center;
 }
@@ -804,8 +809,16 @@ video {
   overflow: hidden;
 }
 
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
 .overflow-y-scroll {
   overflow-y: scroll;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-full {
@@ -839,6 +852,10 @@ video {
   border-bottom-right-radius: 0.75rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .border-2 {
   border-width: 2px;
 }
@@ -850,11 +867,6 @@ video {
 .border-neutral {
   --tw-border-opacity: 1;
   border-color: hsl(250 97.2% 72.4% / var(--tw-border-opacity));
-}
-
-.border-primaryDark {
-  --tw-border-opacity: 1;
-  border-color: hsl(256 91.7% 87.3% / var(--tw-border-opacity));
 }
 
 .border-primary {
@@ -870,6 +882,16 @@ video {
 .bg-ctaDark {
   --tw-bg-opacity: 1;
   background-color: hsl(86 100% 63.8% / var(--tw-bg-opacity));
+}
+
+.bg-ctaLight {
+  --tw-bg-opacity: 1;
+  background-color: hsl(86 100% 77.8% / var(--tw-bg-opacity));
+}
+
+.bg-dark {
+  --tw-bg-opacity: 1;
+  background-color: hsl(189 5.3% 17.7% / var(--tw-bg-opacity));
 }
 
 .bg-neutral {
@@ -900,6 +922,10 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-70 {
+  --tw-bg-opacity: 0.7;
 }
 
 .bg-gradient-to-b {
@@ -940,6 +966,16 @@ video {
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-4 {
@@ -988,6 +1024,10 @@ video {
 
 .pt-0 {
   padding-top: 0px;
+}
+
+.pt-24 {
+  padding-top: 6rem;
 }
 
 .text-center {
@@ -1045,6 +1085,11 @@ video {
   color: hsl(222 66.8% 36.7% / var(--tw-text-opacity));
 }
 
+.text-green {
+  --tw-text-opacity: 1;
+  color: hsl(119 100% 37.8% / var(--tw-text-opacity));
+}
+
 .text-neutral {
   --tw-text-opacity: 1;
   color: hsl(250 97.2% 72.4% / var(--tw-text-opacity));
@@ -1074,17 +1119,20 @@ video {
   opacity: 0.2;
 }
 
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
 
-.outline {
-  outline-style: solid;
-}
-
-.outline-2 {
-  outline-width: 2px;
+.drop-shadow-card {
+  --tw-drop-shadow: drop-shadow(0px 5px 10px  rgba(0, 0, 0, 0.20));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .drop-shadow-lg {
@@ -1094,11 +1142,6 @@ video {
 
 .drop-shadow-md {
   --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.drop-shadow-card {
-  --tw-drop-shadow: drop-shadow(0px 5px 10px  rgba(0, 0, 0, 0.20));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -1113,6 +1156,43 @@ video {
   /* IE and Edge */
   scrollbar-width: none;
   /* Firefox */
+}
+
+/*tr:nth-child(even) {
+  background: theme('colors.ctaLight');
+}
+tr:nth-child(odd) {
+  background: theme('colors.primary');
+}
+*/
+
+tr:hover {
+  background: hsl(256,91.7%,95.3%);
+}
+
+.is-active {
+  background: hsl(86,100%,77.8%);
+  color: hsl(189,5.3%,17.7%);
+  border-color: hsl(189,5.3%,17.7%);
+  border-bottom-width: 2px;
+  border-left-width: 2px;
+  padding-bottom: 1rem;
+  /*  border-top-left-radius: 0.5rem; 
+  border-top-right-radius: 0.5rem;*/
+}
+
+/* segunda Opcion INACTIVE page HOVER */
+
+.is-inactive:hover {
+  background: hsl(86,100%,77.8%);
+  color: hsl(189,5.3%,17.7%);
+  border-color: hsl(189,5.3%,17.7%);
+  border-bottom-width: 2px;
+  border-left-width: 2px;
+  padding-bottom: 1rem;
+  /*  letter-spacing: 0.1em;*/
+  /*  border-top-left-radius: 0.5rem; 
+  border-top-right-radius: 0.5rem;*/
 }
 
 /*.img_post {
@@ -1201,12 +1281,6 @@ video {
 
 #form_register .group-row  > div {
   width: 50%;
-}
-
-@font-face {
-  font-family: "Kanit";
-
-  font-family: "Lexend Deca";
 }
 
 /*
@@ -1338,9 +1412,24 @@ video {
   background-color: hsl(256 91.7% 95.3% / var(--tw-bg-opacity));
 }
 
+.hover\:text-dark:hover {
+  --tw-text-opacity: 1;
+  color: hsl(189 5.3% 17.7% / var(--tw-text-opacity));
+}
+
 .hover\:text-fbk:hover {
   --tw-text-opacity: 1;
   color: hsl(222 66.8% 36.7% / var(--tw-text-opacity));
+}
+
+.hover\:text-green:hover {
+  --tw-text-opacity: 1;
+  color: hsl(119 100% 37.8% / var(--tw-text-opacity));
+}
+
+.hover\:text-red:hover {
+  --tw-text-opacity: 1;
+  color: hsl(0 78.9% 50.7% / var(--tw-text-opacity));
 }
 
 .hover\:opacity-90:hover {
@@ -1350,11 +1439,6 @@ video {
 .hover\:drop-shadow-card:hover {
   --tw-drop-shadow: drop-shadow(0px 5px 10px  rgba(0, 0, 0, 0.20));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.focus\:border-primary:focus {
-  --tw-border-opacity: 1;
-  border-color: hsl(256 91.7% 95.3% / var(--tw-border-opacity));
 }
 
 .focus\:border-neutral:focus {
@@ -1433,6 +1517,10 @@ video {
     width: max-content;
   }
 
+  .md\:max-w-2xl {
+    max-width: 42rem;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
@@ -1445,10 +1533,20 @@ video {
     justify-content: space-between;
   }
 
+  .md\:justify-around {
+    justify-content: space-around;
+  }
+
   .md\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(1rem * var(--tw-space-x-reverse));
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
   .md\:bg-neutral {
@@ -1458,6 +1556,11 @@ video {
 
   .md\:p-4 {
     padding: 1rem;
+  }
+
+  .md\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
   }
 
   .md\:px-6 {
@@ -1475,6 +1578,11 @@ video {
     padding-bottom: 0px;
   }
 
+  .md\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1483,10 +1591,5 @@ video {
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
-  }
-
-  .md\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 }
