--- a/public/css/main.css
+++ b/public/css/main.css
@@ -618,10 +618,6 @@ video {
   z-index: 30;
 }
 
-.col-auto {
-  grid-column: auto;
-}
-
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -635,11 +631,6 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
 }
 
 .mb-10 {
@@ -745,10 +736,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-64 {
-  height: 16rem;
 }
 
 .w-1\/2 {
@@ -1065,10 +1052,6 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.to-primary {
-  --tw-gradient-to: hsl(256,91.7%,95.3%) var(--tw-gradient-to-position);
-}
-
 .to-primaryDark {
   --tw-gradient-to: hsl(256,91.7%,87.3%) var(--tw-gradient-to-position);
 }
@@ -1092,6 +1075,10 @@ video {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .px-10 {
@@ -1129,6 +1116,11 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1157,11 +1149,6 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
 }
 
 .pb-4 {
@@ -1745,6 +1732,10 @@ tr:hover {
     width: 75%;
   }
 
+  .md\:w-32 {
+    width: 8rem;
+  }
+
   .md\:w-96 {
     width: 24rem;
   }
@@ -1760,18 +1751,6 @@ tr:hover {
   .md\:w-max {
     width: -moz-max-content;
     width: max-content;
-  }
-
-  .md\:w-44 {
-    width: 11rem;
-  }
-
-  .md\:w-5\/6 {
-    width: 83.333333%;
-  }
-
-  .md\:w-10\/12 {
-    width: 83.333333%;
   }
 
   .md\:max-w-2xl {
@@ -1824,6 +1803,10 @@ tr:hover {
     padding: 1rem;
   }
 
+  .md\:p-10 {
+    padding: 2.5rem;
+  }
+
   .md\:px-3 {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
@@ -1857,5 +1840,10 @@ tr:hover {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
